fix: monitor infra